syntax = "proto3";
package elys.masterchef;
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/elys-network/elys/x/masterchef/types";

// Incentive Info
message IncentiveInfo {
    // reward amount in eden for 1 year
	string eden_amount_per_year = 1 
        [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
    // starting block height of the distribution
    string distribution_start_block = 2
        [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
    // distribution duration - block number per year
	string total_blocks_per_year = 3
        [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
    // maximum eden allocation per day that won't exceed 30% apr
    string max_eden_per_allocation = 4 
        [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
    // blocks distributed
    string blocks_distributed = 5
        [ (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}